IA meilleur random + emoji

--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
                         <span class="icon">🤖</span>
                         <span>IA</span>
                     </button>
+                    <button id="emojiBtn" class="action-btn ai-btn" title="Ajouter un emoji pertinent">
+                        <span class="icon">🥐</span>
+                        <span>Emoji</span>
+                    </button>
                     <button id="copyBtn" class="action-btn copy-btn">
                         <span class="icon">📋</span>
                         <span>Copier</span>
