AI working wth emoji

--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@
                         </div>
                         <small class="hint">Pourcentage de mots à colorier</small>
                     </div>
+                    <div class="form-group">
+                        <label for="emojiDensitySlider">
+                            <span class="icon">🥐</span> Densité d'emojis
+                        </label>
+                        <div class="slider-row">
+                            <input type="range" id="emojiDensitySlider" min="0" max="50" value="20" class="slider">
+                            <span id="emojiDensityValue" class="value-display">20%</span>
+                        </div>
+                        <small class="hint">Pourcentage de mots avec emoji (0 = désactivé)</small>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button id="launchAiBtn" class="action-btn primary-btn">
